Fix MainPage logic of creating an URL