@@ -19,7 +19,8 @@ public class MainPage {
 
     private static final String ENCODING = "UTF-8";
     private static final String CALCULATOR_SERVLET_URL = "/calculator";
-    private static final String GET_REQUEST_URL = "/api/v1/calculation/";
+    private static final String GET_REQUEST_URL = "/api/v1/calculation";
+    private static final String REQUEST_PARAMETER="equation";
 
     public MainPage(final URL baseUrl) {
         this.baseUrl = baseUrl;
@@ -37,8 +38,7 @@ public class MainPage {
 
     private URL getEncodedUrl(String unformattedInput) throws IOException {
         String spec = URLEncoder.encode(unformattedInput, ENCODING);
-        URI temp= URI.create(baseUrl+CALCULATOR_SERVLET_URL + GET_REQUEST_URL + spec);
-        return temp.toURL();
+        return new URL(baseUrl,CALCULATOR_SERVLET_URL + GET_REQUEST_URL +"?"+REQUEST_PARAMETER+"="+spec);
     }
 
     private void openConnection(final URL url) throws IOException {
